Added cap and optimized known conceptual model mapping (#109)